Prevents inheritable text-align from affecting OptionListOption

--- a/forms/OptionList/Option/style.scss
+++ b/forms/OptionList/Option/style.scss
@@ -1,5 +1,6 @@
 .hui-OptionListOption {
   display: block;
+  text-align: left;
   font-family: $font-copy;
   transition: all 80ms ease-out;
   background-color: #fff;
